# resume_builder

./: .env.example  .gitignore  AGENTS.md  README.md  config.py  gemini.md  input.py  main.py  opencode.json  payload.json  pyproject.toml  tatus
.cursor/plans/: production_backend_upgrade_1934d99f.plan.md
.opencode/agents/: mentor.md
.opencode/plugins/: env-protection.js
alembic/: env.py
alembic/versions/: 31e01b3d3cad_initial_schema.py
backend/: main.py  models.py  requirements.txt  validations.py
backend/models/: certification.py  experience.py  location.py  resume.py
backend/utils/: utils.py
backend/validations/: __init__.py  certification.py  education.py  experience.py  location.py  resume.py
db/: __init__.py  models.py  session.py
docs/: README.md
frontend/: index.html  script.js  style.css
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/builder/: page.tsx
frontend/components/: marquee.tsx  result-panel.tsx  story-scroll.tsx
frontend/lib/: api.ts  sample-resume.ts
models/: __init__.py  certification.py  education.py  experience.py  location.py  resume.py
routes/: resume_routes.py  routes.py
scripts/: README.md  run_dev.ps1  test.ps1
services/: __init__.py  ai_service.py  persistence.py  prompts.py  validation_service.py
tests/: README.md  api_requests.http  conftest.py  test_db_config.py  test_db_lifecycle.py  test_generate_auth.py  test_health.py  test_resume_versioning.py
utils/: __init__.py  utils.py
validations/: __init__.py  certification.py  education.py  experience.py  location.py  resume.py
(+12 files in other folders)
